--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
               <h1>Save Money by Buying Clean Energy</h1>
               <p>We reward people and businesses for consciously choosing clean energy</p>
        <!--        <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">Learn More</a> -->
-              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get perks Today &raquo;</a>
+              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get Perks Now &raquo;</a>
               <h4>Existing clean energy customers get free access!</h4>
             </div>
           </div>
@@ -43,7 +43,7 @@
           <%= image_tag("prana.jpeg", :class=>'img-responsive featurette-image') %>
         </div><!-- /.col-lg-4 -->
         <div class="col-md-7">
-          <h2 class="featurette-heading" id="featurette-sub-heading">If you're going to shop, <span class="text-muted"> #shopclean.</span></h2>
+          <h2 class="featurette-heading" id="featurette-sub-heading">If you're going to shop,<br><span class="text-muted"> #shopclean.</span></h2>
           <p class="lead">A CleanPowerPerks initiative - green businesses and perks.</p>
          <p><a class="btn btn-links" href="#" role="button">Learn More &raquo;</a></p>
         </div>
@@ -63,13 +63,13 @@
         <div class="col-lg-4">
           <i class="icon-fa-gift"></i>
           <h2>2 - Browse Perks</h2>
-          <p>Cool brands, green businesses, and awesome Perks.</p>
+          <p>Green businesses, and awesome deals.</p>
           <p><a class="btn btn-links-2" href="#" role="button">Browse Perks &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4"> 
           <i class="icon-fa-money"></i> 
           <h2>3 - Save $$$</h2>
-          <p>Helping the planet and saving money at the same time.</p>
+          <p>Save money and our planet at the same time.</p>
           <p><a class="btn btn-links-2" href="#" role="button">Learn More &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
