--- a/app/assets/stylesheets/cleanpowerperks.css.scss
+++ b/app/assets/stylesheets/cleanpowerperks.css.scss
@@ -66,6 +66,7 @@ h1, h2, h3, h4, h5, h6, a, p {
 	margin: 0;
 	font-family: 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 	text-rendering: optimizeLegibility;
+	font-weight: 400;
 }
 
 /* Landing Page Images */
@@ -129,7 +130,7 @@ h1, h2, h3, h4, h5, h6, a, p {
 	}
 }
 #btn-sign-up {
-	font-weight: 600;
+	font-weight: 400;
 	font-size: 20px;
 }
 
@@ -163,6 +164,7 @@ h1, h2, h3, h4, h5, h6, a, p {
 	box-shadow: inset 0 3px 9px rgba(0, 0, 0, 0.075);
 	color: white;
 	font-size: 1.5rem;
+	margin-top: 1.5rem;
 	&:hover {
 		background-image: linear-gradient(to bottom, grey 0%, grey 100%);
 		border: none;
