--- a/app/assets/stylesheets/cleanpowerperks.css.scss
+++ b/app/assets/stylesheets/cleanpowerperks.css.scss
@@ -32,13 +32,13 @@ $grey-theme-bottom: #4F4E4E;
 		}
 	}
 	.nav > li > a {
-		font-family: 'Pompiere', "'Gotham SSm A', 'Gotham SSm B'", 'Helvetica Neue', Arial, Helvetica, sans-serif;
+		font-family: 'Pompiere', 'Source Sans Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 		font-size: 22px;
 		letter-spacing: 0.5px;
 		color: #303030;
 	}
 	.dropdown-menu > li > a {
-		font-family: 'Pompiere', 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+		font-family: 'Pompiere', 'Source Sans Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 		font-size: 18px;
 	}
 }
@@ -64,7 +64,7 @@ a.navbar-logo {
 
 h1, h2, h3, h4, h5, h6, a, p {
 	margin: 0;
-	font-family: 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+	font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 	text-rendering: optimizeLegibility;
 	font-weight: 400;
 }
@@ -137,7 +137,7 @@ h1, h2, h3, h4, h5, h6, a, p {
 .navbar-button {
 	padding: (($navbar-height - 34) / 2 ) 10px (($navbar-height - 34) / 2 ) !important;
 	btn {
-		font-family: 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+		font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 		letter-spacing: 0px;
 	}
 	&:hover {
@@ -188,7 +188,7 @@ h1, h2, h3, h4, h5, h6, a, p {
   li {
       display: block;
       h3 {
-      	font-family: 'Pompiere', 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+      	font-family: 'Pompiere', 'Source Sans Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
       	margin-bottom: 5px;
       	color: white;
 	 	}
