--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,7 @@
     <%= favicon_link_tag 'favicon.png' %>
     <%= display_meta_tags :site => 'Clean Power Perks' %>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Pompiere">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Josefin+Slab">
-    <link href="//cloud.typography.com/7222252/625882/css/fonts.css" media="all" rel="stylesheet" />
-</head>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro">
 <body>
       <div class="container">
         <div class="navbar navbar-default navbar-static-top navbar-fixed-top" role="navigation">
