landing page iteration 4

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,7 @@
  @import "font-icons";
  @import "carousel.css.scss";
  @import "cleanpowerperks.css.scss";
+ @import "bootstrap/variables";
+ @import "bootstrap/mixins";
+
+ $green-theme: #009a96;
