--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,8 +20,6 @@
               <h4>Existing clean energy customers get free access!</h4>
             </div>
           </div>
-          <a class="left carousel-control"></a>
-          <a class="right carousel-control"></a>
     </div>
   </div><!-- /.carousel -->
 
@@ -30,13 +28,34 @@
     <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
+    <div class="second-section">
+      <div class="container marketing">
 
-    <div class="container marketing">
-
- 
-
+       <!-- Three columns of text below the carousel -->
+        <div class="row featurette">
+          <div class="col-lg-4">
+            <i class="icon-fa-sun"></i>
+            <h2>1 - Get Clean Energy</h2>
+            <p>Easy access to a wide range of providers</p>
+            <p><a class="btn btn-links-2" href="#" role="button">Sign up now &raquo;</a></p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <i class="icon-fa-gift"></i>
+            <h2>2 - Browse Perks</h2>
+            <p>Green businesses, and awesome deals.</p>
+            <p><a class="btn btn-links-2" href="#" role="button">Browse Perks &raquo;</a></p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4"> 
+            <i class="icon-fa-money"></i> 
+            <h2>3 - Save $$$</h2>
+            <p>Save money and our planet at the same time.</p>
+            <p><a class="btn btn-links-2" href="#" role="button">Learn More &raquo;</a></p>
+          </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+      </div>
+    </div>
       <!-- START THE FEATURETTES -->
-
+    <div class="container marketing">
       <div class="row featurette">
         <div class="col-md-5">
           <h2 class="featurette-heading" id="featurette-sub-heading">Perk of the Month</h2>
@@ -44,59 +63,31 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-md-7">
           <h2 class="featurette-heading" id="featurette-sub-heading">If you're going to shop,<br><span class="text-muted"> #shopclean.</span></h2>
-          <p class="lead">A CleanPowerPerks initiative - green businesses and perks.</p>
-          <p><a class="btn btn-links" href="#" role="button">Learn More &raquo;</a></p>
-        </div>
-      </div><!-- /.row -->
-
-      <hr class="featurette-divider">
-     <!-- Three columns of text below the carousel -->
-      <div class="row featurette">
-        <h2 class="featurette-heading">How It Works</h2>
-
-        <div class="col-lg-4">
-          <i class="icon-fa-sun"></i>
-          <h2>1 - Buy Clean Energy</h2>
-          <p>Easy access to a wide range of providers</p>
-          <p><a class="btn btn-links-2" href="#" role="button">Sign up now &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <i class="icon-fa-gift"></i>
-          <h2>2 - Browse Perks</h2>
-          <p>Green businesses, and awesome deals.</p>
-          <p><a class="btn btn-links-2" href="#" role="button">Browse Perks &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4"> 
-          <i class="icon-fa-money"></i> 
-          <h2>3 - Save $$$</h2>
-          <p>Save money and our planet at the same time.</p>
+          <h4>A CleanPowerPerks initiative - green businesses and perks.</h4>
           <p><a class="btn btn-links-2" href="#" role="button">Learn More &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
-
-      <hr class="featurette-divider">
-
-     <div class="row featurette">
-        <h2 class="featurette-heading">Featured Perks</h2>
-        <div class="col-md-3">
-          <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
-           <p><a class="btn btn-links" href="#" role="button">Perk 1 &raquo;</a></p>
         </div>
-        <div class="col-md-3">
-          <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
-           <p><a class="btn btn-links" href="#" role="button">Perk 2 &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-md-3">
-          <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
-           <p><a class="btn btn-links" href="#" role="button">Perk 3 &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-md-3">
-          <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
-           <p><a class="btn btn-links" href="#" role="button">Perk 4 &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
+    </div>
+ 
 
-      <hr class="featurette-divider">
+    <div class="third-section">
+      <div class="container marketing">
+       <div class="row featurette">
+          <h2 class="featurette-heading"><btn class="btn btn-danger btn-lg">Featured Perks</btn></h2>
+          <div class="col-md-3">
+            <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
+          </div>
+          <div class="col-md-3">
+            <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-md-3">
+            <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-md-3">
+            <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
+          </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+
       <!-- <div class="row featurette">
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="/assets/windfarm.png" alt="Generic placeholder image">
