--- a/app/assets/stylesheets/cleanpowerperks.css.scss
+++ b/app/assets/stylesheets/cleanpowerperks.css.scss
@@ -1,6 +1,10 @@
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 
+/* General */
+body {
+	background-image: url("/assets/body-background.png");
+}
 /* Navbar */
 
 $green-theme: #009a96;
@@ -8,6 +12,8 @@ $green-theme-top: #009a96;
 $green-theme-bottom: #009a96;
 $grey-theme-top: #BABABA;
 $grey-theme-bottom: #4F4E4E;
+$font-1: 'Pompiere', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+$font-2: "Open Sans",Verdana,Tahoma,"DejaVu Sans",sans-serif;
 
 @media (min-width: 768px) {
   	div.navbar-header {
@@ -18,9 +24,39 @@ $grey-theme-bottom: #4F4E4E;
 		float: right !important;
 	}
 }
-.navbar {
+
+div.navbar-secondary {
+	margin-top: 25px;
 	line-height: 65px;
+	box-shadow: 0 0 3px #999;
+	/*border-bottom: 2px #454343 solid;*/
+}
+
+div.navbar-primary {
+	line-height: 25px !important;
+	margin-bottom: 0px !important;
+	min-height: 25px !important;
+	background-image: url("/assets/navbar-top-background.png");
+	box-shadow: 0 0 3px #999;
+}
+
+ul.navbar-nav-primary {
+	min-height: 30px;
+	text-align: center;
+	li {
+		a {
+			padding: 0 5px 0 5px;
+			font-size: 16px !important;
+			img {
+				vertical-align: middle;
+			}
+		}
+	}
+}
+
+.navbar {
 	background-color: white;
+	background-image: url("/assets/navbar-background.png");
 	.nav > li {
 		&:hover {
 			background-image: -webkit-linear-gradient(top, #ebebeb 0%, #f3f3f3 100%);
@@ -32,18 +68,15 @@ $grey-theme-bottom: #4F4E4E;
 		}
 	}
 	.nav > li > a {
-		font-family: 'Pompiere', 'Source Sans Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+		font-family: $font-1;
 		font-size: 22px;
-		letter-spacing: 0.5px;
+		/*letter-spacing: 0.5px;*/
 		color: #303030;
 	}
 	.dropdown-menu > li > a {
-		font-family: 'Pompiere', 'Source Sans Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+		font-family: $font-1;
 		font-size: 18px;
 	}
-}
-.navbar-fixed-top {
-  border-bottom: 2px #454343 solid;
 }
 
 div.navbar-header {
@@ -64,7 +97,7 @@ a.navbar-logo {
 
 h1, h2, h3, h4, h5, h6, a, p {
 	margin: 0;
-	font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+	font-family: $font-2;
 	text-rendering: optimizeLegibility;
 	font-weight: 400;
 }
@@ -77,26 +110,26 @@ h1, h2, h3, h4, h5, h6, a, p {
 .img-landing {
 	background-image: url('/assets/smiling_girl.jpg');
 	background-repeat: no-repeat;
-	background-size: 1140px;
+	background-size: 1440px;
 	background-position: center;
 	background-color: white;
 }
 
 @media (min-width: 1154px) {
 	.landing-logo {
-		width: 250px;
+		width: 200px;
 	}
 }
 
 @media (min-width: 768px) and (max-width: 1153px) {
 	.landing-logo {
-		width: 200px;
+		width: 150px;
 	}
 }
 
 @media (min-width: 429px) and (max-width: 767px) {
 	.landing-logo {
-		width: 200px;
+		width: 150px;
 	}
 	.navbar-button {
 		btn {
@@ -107,7 +140,7 @@ h1, h2, h3, h4, h5, h6, a, p {
 
 @media (min-width: 100px) and (max-width: 428px) {
 	.landing-logo {
-		width: 200px;
+		width: 150px;
 	}
 	.navbar-button {
 		btn {
@@ -118,26 +151,35 @@ h1, h2, h3, h4, h5, h6, a, p {
 
 /* Landing Page Buttons */
 
+#btn-navbar-sign-up {
+	background: url("/assets/sign_up.png") no-repeat;
+}
 #btn-sign-up, .btn-links {
+	font-family: $font-1;
+	letter-spacing: 0.5px;
 	background: none;
+	font-weight: 600;
 	background-color: $green-theme;
 	color: white;
 	font-size: 2.5rem;
 	margin-bottom: 0.5rem;
+	border-bottom-width: 3px;
+	border-bottom-style: solid;
+	border-bottom-color: #228276;
 	&:hover {
 		background-color: #127875;
 		color: white;
 	}
 }
 #btn-sign-up {
-	font-weight: 400;
+	font-weight: 700;
 	font-size: 20px;
 }
 
 .navbar-button {
 	padding: (($navbar-height - 34) / 2 ) 10px (($navbar-height - 34) / 2 ) !important;
 	btn {
-		font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+		font-family: $font-2;
 		letter-spacing: 0px;
 	}
 	&:hover {
@@ -154,6 +196,7 @@ h1, h2, h3, h4, h5, h6, a, p {
 }
 
 .btn-links-2 {
+	font-family: $font-2;
 	border: none;
 	background: none;
 	background-image: -webkit-linear-gradient(top, $grey-theme-top 0%, $grey-theme-bottom 100%);
@@ -173,10 +216,16 @@ h1, h2, h3, h4, h5, h6, a, p {
 }
 
 
+/* Section Colors */
 
-.marketing .col-lg-4 i {
-	font-size: 50px;
-	color: $green-theme;
+.second-section {
+	background: rgb(52, 40, 40);
+	color: white;
+}
+
+.third-section {
+	background: #009a96;
+	color: white;
 }
 
 /* FOOTER */
@@ -188,7 +237,7 @@ h1, h2, h3, h4, h5, h6, a, p {
   li {
       display: block;
       h3 {
-      	font-family: 'Pompiere', 'Source Sans Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+      	font-family: $font-1;
       	margin-bottom: 5px;
       	color: white;
 	 	}
