--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,19 @@
     <%= display_meta_tags :site => 'Clean Power Perks' %>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Pompiere">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro">
+    <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700italic,700|Titillium+Web:400,600,400italic,600italic,700,700italic" media="all" />
 <body>
       <div class="container">
-        <div class="navbar navbar-default navbar-static-top navbar-fixed-top" role="navigation">
+        <div class="navbar navbar-fixed-top navbar-static-top navbar-primary" role="navigation">
+          <div class="container">
+              <ul class="nav navbar-nav-primary">
+                <li><a href="#about">10% OFF FIRST PURCHASE FOR ALL PRANA ITEMS</a></li>
+              </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="navbar navbar-default navbar-static-top navbar-fixed-top navbar-secondary" role="navigation">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -52,7 +62,7 @@
                 <li><a href="#about">Contact</a></li>
               </ul>
                <ul class="nav navbar-nav navbar-right">
-                  <li><a class="navbar-button"><btn class="btn btn-danger" id='' href="#" role="button">Sign Up</btn></a></li>
+                  <li><a class="navbar-button"><btn class="btn btn-danger" id='' href="#" role="button">Get Perks</btn></a></li>
                   <li><a class="navbar-button"><btn class="btn btn-default" id='' href="#" role="button">Log In</btn></a></li>
                 </ul>
             </div>
@@ -87,7 +97,7 @@
           <div class="col-md-4">
             <ul>
             <li><h3>Interested in receiving updates on latest perks and deals?</h3></li>
-            <li><a class='btn btn-danger btn-medium' id="sign-up-footer">Sign Up Now &raquo;</a></li>
+            <li><a class='btn btn-primary btn-medium' id="sign-up-footer">Sign Up Now &raquo;</a></li>
             <li>
               <h5>Copyright © 2014 CleanPowerPerks. All rights reserved.</h5>
             </li>
