--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <meta name="author"           content="Jonathan Lau"/>
     <meta name="designer"         content="Jonathan Lau"/>
     <meta name="copyright"          content="Copyright Clean Power Perks &copy;2013"/>
-    <%= favicon_link_tag 'favicon.png' %>
+    <%= favicon_link_tag 'favfa fa.png' %>
     <%= display_meta_tags :site => 'Clean Power Perks' %>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Pompiere">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro">
@@ -19,7 +19,7 @@
         <div class="navbar navbar-fixed-top navbar-static-top navbar-primary" role="navigation">
           <div class="container">
               <ul class="nav navbar-nav-primary">
-                <li><a href="#about">10% OFF FIRST PURCHASE FOR ALL PRANA ITEMS</a></li>
+                <li><a href="#about"><i class="fa fa-gift"></i><b> 50% OFF FIRST ORDER FOR PRANA</a></b></li>
               </ul>
           </div>
         </div>
@@ -39,7 +39,7 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="#about">How It Works</a></li>
-                <li><a href="#about">Get Perks</a></li>
+                <li><a href="#about">Perks</a></li>
                 <!-- <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Get Perks <b class="caret"></b></a>
                   <ul class="dropdown-menu">
@@ -59,12 +59,11 @@
                     <li><a href="#">For Consumer Brands</a></li>
                   </ul>
                 </li>
-                <li><a href="#about">Contact</a></li>
+                <li><a href="#about">About</a></li>
               </ul>
-               <ul class="nav navbar-nav navbar-right">
-                  <li><a class="navbar-button"><btn class="btn btn-danger" id='' href="#" role="button">Get Perks</btn></a></li>
-                  <li><a class="navbar-button"><btn class="btn btn-default" id='' href="#" role="button">Log In</btn></a></li>
-                </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li class="navbar-button"><btn class="btn btn-default" id='' href="#" role="button">Log In <i class="fa fa-sign-in"></i></btn></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -88,9 +87,9 @@
             <li><h3>Let's keep in touch</h3></li>
             <li><p>Contact us at <a href="mailto:info@cleanpowerperks.com" class="email">info@cleanpowerperks.com</a><br>or visit us at:</p></li>
             <li>
-              <a class="icon icon-fa-twitter"></a>
-              <a class="icon icon-fa-facebook"></a>
-              <a class="icon icon-fa-linkedin"></a>
+              <a class="fa fa-twitter"></a>
+              <a class="fa fa-facebook"></a>
+              <a class="fa fa-linkedin"></a>
             </li>
             </ul>
           </div>
