--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,15 +8,16 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require font-awesome
  */
 
- $navbar-height: 65px;
  @import "bootstrap";
  @import "bootstrap/theme";
- @import "font-icons";
  @import "carousel.css.scss";
  @import "cleanpowerperks.css.scss";
+
+
  @import "bootstrap/variables";
  @import "bootstrap/mixins";
-
  $green-theme: #009a96;
+ $navbar-height: 50px;
