--- a/app/assets/stylesheets/carousel.css.scss
+++ b/app/assets/stylesheets/carousel.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
+
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
@@ -82,7 +83,7 @@ body {
   left: 0;
   min-width: 100%;
   height: $carousel-height;
-  margin-top: 65px;
+  margin-top: 50px;
 }
 
 
@@ -97,7 +98,7 @@ body {
 }
 
 /* Center align the text within the three columns below the carousel */
-.marketing div {
+.marketing div.row {
   text-align: center;
   margin-bottom: 20px;
 }
@@ -134,6 +135,17 @@ body {
   line-height: 1;
   letter-spacing: -1px;
   text-align: center;
+}
+
+.deals-heading {
+  margin-bottom: 5px;
+  a {
+    color: #333;
+    font-size: 26px;
+    &:hover {
+      text-decoration: none;
+    }
+  }
 }
 
 #featurette-sub-heading {
