--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
               <h1>Save Money by Buying Clean Energy</h1>
               <p>We reward people and businesses for consciously choosing clean energy</p>
        <!--        <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">Learn More</a> -->
-              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get Perks Now &raquo;</a>
+              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button"><i class="fa fa-gift"> Get Perks Now</i></a>
               <h4>Existing clean energy customers get free access!</h4>
             </div>
           </div>
@@ -32,24 +32,21 @@
       <div class="container marketing">
 
        <!-- Three columns of text below the carousel -->
-        <div class="row featurette">
+        <div class="row featurette how-it-works">
           <div class="col-lg-4">
-            <i class="icon-fa-sun"></i>
+            <i class="fa fa-sun-o"></i>
             <h2>1 - Get Clean Energy</h2>
             <p>Easy access to a wide range of providers</p>
-            <p><a class="btn btn-links-2" href="#" role="button">Sign up now &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <i class="icon-fa-gift"></i>
+            <i class="fa fa-gift"></i>
             <h2>2 - Browse Perks</h2>
             <p>Green businesses, and awesome deals.</p>
-            <p><a class="btn btn-links-2" href="#" role="button">Browse Perks &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4"> 
-            <i class="icon-fa-money"></i> 
+            <i class="fa fa-money"></i> 
             <h2>3 - Save $$$</h2>
             <p>Save money and our planet at the same time.</p>
-            <p><a class="btn btn-links-2" href="#" role="button">Learn More &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
       </div>
@@ -64,7 +61,7 @@
         <div class="col-md-7">
           <h2 class="featurette-heading" id="featurette-sub-heading">If you're going to shop,<br><span class="text-muted"> #shopclean.</span></h2>
           <h4>A CleanPowerPerks initiative - green businesses and perks.</h4>
-          <p><a class="btn btn-links-2" href="#" role="button">Learn More &raquo;</a></p>
+          <p><a class="btn btn-links-2" href="#" role="button">Learn More  <icon class="fa fa-arrow-right"></i></a></p>
         </div>
       </div><!-- /.row -->
     </div>
@@ -73,19 +70,55 @@
     <div class="third-section">
       <div class="container marketing">
        <div class="row featurette">
-          <h2 class="featurette-heading"><btn class="btn btn-danger btn-lg">Featured Perks</btn></h2>
-          <div class="col-md-3">
-            <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
+          <h3 class="deals-heading"><a>Popular Perks</a></h3>
+          <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+              <div class="perk-image-container">
+                <%= image_tag("burts_bees.jpg", :class=>'img-responsive featurette-image') %>
+              </div>
+              <div class="caption">
+                <h3>Burts Bees</h3>
+                <h5>Up to 50% Off</h5>
+                <p><i class="fa fa-map-marker"></i> Somerville, MA</p>
+              </div>
+            </div>
           </div>
-          <div class="col-md-3">
-            <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-md-3">
-            <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-md-3">
-            <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
-          </div><!-- /.col-lg-4 -->
+          <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+              <div class="perk-image-container">
+                <%= image_tag("brooklyn_boulders.jpg", :class=>'img-responsive featurette-image') %>
+              </div>
+              <div class="caption">
+                <h3>Brooklyn Boulders</h3>
+                <h5>Up to 50% Off</h5>
+                <p><i class="fa fa-map-marker"></i> Somerville, MA</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+              <div class="perk-image-container">
+                <%= image_tag("burts_bees.jpg", :class=>'img-responsive featurette-image') %>
+              </div>
+              <div class="caption">
+                <h3>Burts Bees</h3>
+                <h5>Up to 50% Off</h5>
+                <p><i class="fa fa-map-marker"></i> Somerville, MA</p>
+              </div>
+            </div>
+          </div>
+           <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+              <div class="perk-image-container">
+                <%= image_tag("brooklyn_boulders.jpg", :class=>'img-responsive featurette-image') %>
+              </div>
+              <div class="caption">
+                <h3>Brooklyn Boulders</h3>
+                <h5>Up to 50% Off</h5>
+                <p><i class="fa fa-map-marker"></i> Somerville, MA</p>
+              </div>
+            </div>
+          </div>
         </div><!-- /.row -->
 
       <!-- <div class="row featurette">
