perks-page iteration 1

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,9 +15,9 @@
  @import "bootstrap/theme";
  @import "carousel.css.scss";
  @import "cleanpowerperks.css.scss";
-
+ @import "perks.css.scss";
+ @import "global_styles.css.scss";
 
  @import "bootstrap/variables";
  @import "bootstrap/mixins";
- $green-theme: #009a96;
- $navbar-height: 50px;
+ @import "variables/global";
