--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <meta name="author"           content="Jonathan Lau"/>
     <meta name="designer"         content="Jonathan Lau"/>
     <meta name="copyright"          content="Copyright Clean Power Perks &copy;2013"/>
-    <%= favicon_link_tag 'favfa fa.png' %>
+    <%= favicon_link_tag 'favicon.png' %>
     <%= display_meta_tags :site => 'Clean Power Perks' %>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Pompiere">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro">
@@ -39,7 +39,7 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="#about">How It Works</a></li>
-                <li><a href="#about">Perks</a></li>
+                <li><a href="/perks">Perks</a></li>
                 <!-- <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Get Perks <b class="caret"></b></a>
                   <ul class="dropdown-menu">
