--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,6 +52,7 @@
       </div>
     </div>
       <!-- START THE FEATURETTES -->
+  <div class="fourth-section">
     <div class="container marketing">
       <div class="row featurette">
         <div class="col-md-5">
@@ -65,6 +66,7 @@
         </div>
       </div><!-- /.row -->
     </div>
+  </div>
  
 
     <div class="third-section">
@@ -120,33 +122,4 @@
             </div>
           </div>
         </div><!-- /.row -->
-
-      <!-- <div class="row featurette">
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="/assets/windfarm.png" alt="Generic placeholder image">
-        </div>
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Buy clean energy now. <span class="text-muted">Doing good made convenient. </span></h2>
-          <p class="lead">Easy access to a wide range of energy providers.</p>
-          <p><a class="btn btn-links" href="#" role="button">Buy Now &raquo;</a></p>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Support Our Planet. <span class="text-muted"> All businesses should help.</span></h2>
-          <p class="lead">Reach like-minded consumers and promote your brand.</p>
-          <p><a class="btn btn-links" href="#" role="button">Join us &raquo;</a></p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="/assets/customer.png" alt="Generic placeholder image">
-        </div>
-      </div>
- --><!-- 
-      <hr class="featurette-divider"> -->
-
-      <!-- /END THE FEATURETTES -->
-
     </div><!-- /.container -->
