--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -79,9 +79,9 @@
                 <%= image_tag("burts_bees.jpg", :class=>'img-responsive featurette-image') %>
               </div>
               <div class="caption">
-                <h3>Burts Bees</h3>
+                <h3>Burt's Bees</h3>
                 <h5>Up to 50% Off</h5>
-                <p><i class="fa fa-map-marker"></i> Somerville, MA</p>
+                <p><i class="fa fa-map-marker"></i> Online</p>
               </div>
             </div>
           </div>
@@ -103,9 +103,9 @@
                 <%= image_tag("burts_bees.jpg", :class=>'img-responsive featurette-image') %>
               </div>
               <div class="caption">
-                <h3>Burts Bees</h3>
+                <h3>Burt's Bees</h3>
                 <h5>Up to 50% Off</h5>
-                <p><i class="fa fa-map-marker"></i> Somerville, MA</p>
+                <p><i class="fa fa-map-marker"></i> Online</p>
               </div>
             </div>
           </div>
