removed files, added import rake, csv, models

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Clean Power Perks</title>
+    <title>HumanVoiceBank</title>
     <%= stylesheet_link_tag  "application" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
@@ -9,7 +9,7 @@
     <meta name="author"           content="Jonathan Lau"/>
     <meta name="designer"         content="Jonathan Lau"/>
     <meta name="copyright"          content="Copyright Clean Power Perks &copy;2013"/>
-    <%= favicon_link_tag 'favicon.png' %>
+    <%= favicon_link_tag 'hvb-icon.svg' %>
     <%= display_meta_tags :site => 'Clean Power Perks' %>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Pompiere">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro">
