--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -80,33 +80,33 @@
           }
         ]
       }
-      myNewChart = new Chart($("#myChart").get(0).getContext("2d")).Line(data, {scaleShowLabels:false}); 
+      myNewChart = new Chart($("#myChart").get(0).getContext("2d")).Line(data); 
     })
   }
-    // debugger
-    //This will get the first returned node in the jQuery collection.
-    // var options = [];
+  // debugger
+  //This will get the first returned node in the jQuery collection.
+  // var options = [];
 
 
-     // var data = {
-        //   labels : ["January","February","March","April","May","June","July"],
-        //   datasets : [
-        //     {
-        //       fillColor : "rgba(220,220,220,0.5)",
-        //       strokeColor : "rgba(220,220,220,1)",
-        //       pointColor : "rgba(220,220,220,1)",
-        //       pointStrokeColor : "#fff",
-        //       data : [65,59,90,81,56,55,40]
-        //     },
-        //     {
-        //       fillColor : "rgba(151,187,205,0.5)",
-        //       strokeColor : "rgba(151,187,205,1)",
-        //       pointColor : "rgba(151,187,205,1)",
-        //       pointStrokeColor : "#fff",
-        //       data : [28,48,40,19,96,27,100]
-        //     }
-        //   ]
-        // }
+   // var data = {
+      //   labels : ["January","February","March","April","May","June","July"],
+      //   datasets : [
+      //     {
+      //       fillColor : "rgba(220,220,220,0.5)",
+      //       strokeColor : "rgba(220,220,220,1)",
+      //       pointColor : "rgba(220,220,220,1)",
+      //       pointStrokeColor : "#fff",
+      //       data : [65,59,90,81,56,55,40]
+      //     },
+      //     {
+      //       fillColor : "rgba(151,187,205,0.5)",
+      //       strokeColor : "rgba(151,187,205,1)",
+      //       pointColor : "rgba(151,187,205,1)",
+      //       pointStrokeColor : "#fff",
+      //       data : [28,48,40,19,96,27,100]
+      //     }
+      //   ]
+      // }
 
 
 </script>
